--- a/mall-parent/mall-service-impl/mall-service-weixin/src/main/resources/application.yml
+++ b/mall-parent/mall-service-impl/mall-service-weixin/src/main/resources/application.yml
@@ -5,5 +5,26 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/mall-wechat?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
 server:
   port: 9000
+wx:
+  mp:
+    useRedis: false
+    redisConfig:
+      host: 127.0.0.1
+      port: 6379
+    configs:
+      - appId: wx30eaf1f31dddda2d # 第一个公众号的appid
+        secret: 92308d79777df9ebf78d087f47ff84ba # 公众号的appsecret
+        token: fandf # 接口配置里的Token值
+fdf:
+  weixin:
+    login:
+      # 亲爱的用户:{{first.DATA}} 登录时间:{{keyword1.DATA}} 登录IP:{{keyword2.DATA}} 登录设备:{{keyword3.DATA}} 如果不是您本人登录，可以联系管理员锁定账号。
+      templateId: PKXO0N3p_iWsKZXAkxchEhTvDEYq0XlHCKHAcVOasig
